Import of MRAMBERG/Catalyst-Plugin-FormValidator-0.02.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Plugin-FormValidator
gitpan-cpan-version:      0.02
gitpan-cpan-path:         MRAMBERG/Catalyst-Plugin-FormValidator-0.02.tar.gz
gitpan-cpan-author:       MRAMBERG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension Catalyst::Plugin::FormValidator.
 
+0.02  Fri Apr 15 15:00:00 2005
+        - Updated documentation.
 0.01  Fri Jan 28 22:00:00 2005
         - first release
