--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Plugin::FormValidator.
 
+0.04  Thu Apr  2 18:45:00 2009
+    - Add deprecation notice
+	- Added quotes on prereq.
 0.02  Fri Apr 15 15:00:00 2005
         - Updated documentation.
 0.01  Fri Jan 28 22:00:00 2005
