--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Plugin::FormValidator.
 
+0.94      Mon Mar 1  16:09
+       - bumped version
+	   - official release 
 0.093_01  Tue Feb 23 15:04
        - Class::C3::Adopt::NEXT is not used so is removed.
        - MRO::Compat added for maybe::next::method per https://rt.cpan.org/Public/Bug/Display.html?id=54917
